[package]
name = "sunvox-sys"
version = "0.1.0"
authors = ["Andrew Abbott <mirrexagon@mirrexagon.com>"]

description = "FFI bindings to the SunVox library"
license = "CC0-1.0"
repository = "https://github.com/mirrexagon/rust-sunvox-sys"
documentation = "https://docs.rs/sunvox-sys"
readme = "README.md"
keywords = ["sunvox", "audio", "music"]

[dependencies]
libc = "0.2"

